Climate Shift Index

--- a/en/topic-resources/climate-change/index.html
+++ b/en/topic-resources/climate-change/index.html
@@ -191,6 +191,8 @@ EN-US;mso-bidi-language:AR-SA;mso-bidi-font-weight:bold'>TM</span></sup>. The Ho
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Climate Change Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/453">Use the Climate Shift Index® to Show How Much Temperatures Have Changed Locally</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>The Climate Shift Index® shows how much things have changed. It indicates how climate change has altered the frequency of daily temperatures in any location around the world, every day.</p> <strong><a href="../../../en/topic-resources/detail/453">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/452">Focus Climate Messages on the Future and Dear Ones</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>Based on research with 7,624 U.S. adults, interventions that emphasize social relevance and future thinking are most effective at motivating climate action.</p> <strong><a href="../../../en/topic-resources/detail/452">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/450">Six Key Messages for Climate Action</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
