--- a/en/topic-resources/detail/453/index.html
+++ b/en/topic-resources/detail/453/index.html
@@ -105,29 +105,25 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">Focus Climate Messages on the Future and Dear Ones</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Use the Climate Shift Index® to Show How Much Temperatures Have Changed Locally</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://www.pnas.org/doi/10.1073/pnas.2426768122" target="_new">https://www.pnas.org/doi/10.1073/pnas.2426768122</a></td>
+<td class="rt_text_box"><a href="https://www.climatecentral.org/climate-shift-index" target="_new">https://www.climatecentral.org/climate-shift-index</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>Based on research with 7,624 U.S. adults, interventions that emphasize social relevance and future thinking are most effective at motivating climate action.
+<td class="rt_text_box"><p>The Climate Shift Index® shows how much things have changed. It indicates how climate change has altered the frequency of daily temperatures in any location around the world, every day.
 </p></td>
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
 <ul>	
-<li>The authors conducted a large-scale “intervention tournament: that tested 17 interventions that targeted psychological mechanisms described by three key themes: Relevance, Future Thinking, and Response Efficacy.</li> 
-<li>They recruited 7,624 U.S. adults and randomly assigned them to one of 17 intervention conditions or a no-intervention control group.</li> 
-<li>Interventions that emphasized social relevance were the most effective for motivating people to share news articles and petitions about climate change.</li> 
-<li>Interventions that targeted future thinking were the most effective for broadly motivating individual actions (e.g., driving less, eating vegetarian meals) and collective actions (e.g., donating, volunteering) to address climate change.</li> 
-<li>Interventions that emphasized the environmental impact of these actions reliably increased the perceived impact of pro-environmental actions, but did not consistently motivate action.</li> 
-<li>Interventions that targeted two or more mechanisms—such as imagining a future scenario that involved oneself or close others—were most effective.</li> 
-<li>The leading interventions were substantially more effective than prevalent existing strategies (e.g., carbon footprint information).
-</li>
+<li>The index gives you a way to connect climate change to weather events like extreme heat and wildfires, and to impacts like school closures and health issues, locally and globally.</li> 
+<li>The index is grounded in peer-reviewed attribution science and was launched by Climate Central in 2022.</li>
+<li>From the index website, you can download custom graphics designed for TV, social media, presentations, reports, and more.
+</li> 
 </ul>
 </td>
 </tr>
@@ -135,16 +131,13 @@ theForm.elements[i].checked = status;
 <td class="highlight_box">Topics:</td>
 <td class="rt_text_box">Environment, Climate Change Adaptation, Climate Change Mitigation</td>
 </tr>
-<td class="highlight_box">Location:</td>
-<td class="rt_text_box">US</td>
-</tr>
 <tr>
 <td class="highlight_box">Resource Type:</td>
 <td class="rt_text_box">Strategies and Interventions</td>
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">PNAS</td>
+<td class="rt_text_box">Climate Central</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
