--- a/en/topic-resources/detail/449/index.html
+++ b/en/topic-resources/detail/449/index.html
@@ -124,8 +124,9 @@ theForm.elements[i].checked = status;
 <li>The authors conducted three experiments (n=766, n=235, n=292) that involved presenting data as either gradual changes or as 'sudden' changes (binary changes between 'this' and 'that'.) </li>
 <li>In all three studies, the 'sudden' changes were seen as stronger changes and had a higher perceived impact, compared with similar amounts of change that happened gradually.</li>
 <li>Binary visuals (showing sudden changes from ‘this to that’) could be used to convey the urgency of addressing climate change, although this may mean losing some message complexity and richness.</li>
-<li></li>
-<li><it>Note:</it> One way to do this is to use the Climate Shift Index® <a href="../../../en/topic-resources/detail/453"></li> to show how much temperatures have changed locally, and then relate that to local impacts of significance
+</ul>
+<ul>
+<li><it>Note:</it> One way to do this is to use the <a href="../../../en/topic-resources/detail/453">Climate Shift Index®</a> to show how much temperatures have changed locally, and then relate that to local impacts of significance
 </ul>
 </td>
 </tr>
