--- a/en/topic-resources/detail/449/index.html
+++ b/en/topic-resources/detail/449/index.html
@@ -126,7 +126,7 @@ theForm.elements[i].checked = status;
 <li>Binary visuals (showing sudden changes from ‘this to that’) could be used to convey the urgency of addressing climate change, although this may mean losing some message complexity and richness.</li>
 </ul>
 <ul>
-<li><em>Note:</em> One way to do this is to use the <a href="../../../../en/topic-resources/detail/453”>Climate Shift Index®</a> to show how much temperatures have changed locally, and then relate that to local impacts of significance
+<li><em>Note:</em> One way to do this is to use the <a href="../../../../en/topic-resources/detail/453”>Climate Shift Index®</a> to show how much temperatures have changed locally, and then relate that to local impacts of significance</li>
 </ul>
 </td>
 </tr>
