ommunicating about the health implications of climate change

--- a/en/topic-resources/detail/454/index.html
+++ b/en/topic-resources/detail/454/index.html
@@ -105,49 +105,44 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">Highlight Clear, Concrete, Significant Climate Shifts Instead of Slow-Moving Climate Trends</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">The Impact of Public Health Messages on Audience Engagement and Collective Climate Action</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://www.nature.com/articles/s41562-025-02183-9" target="_new">https://www.nature.com/articles/s41562-025-02183-9</a></td>
+<td class="rt_text_box"><a href="https://www.sciencedirect.com/science/article/abs/pii/S2352154625000580" target="_new">https://www.sciencedirect.com/science/article/abs/pii/S2352154625000580</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>A series of three experiments suggests that if we want to increase public urgency around climate change, we should highlight clear, concrete, significant shifts instead of slow-moving trends.
+<td class="rt_text_box"><p>Communicating about the health implications of climate change has the potential to make the risks more concrete for audiences and reduce polarization on the issue.
 </p></td>
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
-<ul>	
-<li>For much of the global population, climate change appears as a slow, gradual shift in daily weather. This leads many to perceive its impacts as minor and results in apathy (the ‘boiling frog’ effect – where small changes are not noticed even as they gradually build up into large changes.)</li>
-<li>The authors conducted three experiments (n=766, n=235, n=292) that involved presenting data as either gradual changes or as 'sudden' changes (binary changes between 'this' and 'that'.) </li>
-<li>In all three studies, the 'sudden' changes were seen as stronger changes and had a higher perceived impact, compared with similar amounts of change that happened gradually.</li>
-<li>Binary visuals (showing sudden changes from ‘this to that’) could be used to convey the urgency of addressing climate change, although this may mean losing some message complexity and richness.</li>
-</ul>
-<ul>
-<li><em>Note:</em> One way to do this is to use the <a href="../../../topic-resources/detail/453">Climate Shift Index®</a> to show how much temperatures have changed locally, and then relate that to local impacts of significance</li>
-</ul>
+In preparing this paper, published in 2025, the authors reviewed 30 recent articles on effective communication about climate change and health. They reached three main conclusions related to implementing climate change communications.
+<ol>
+<li>Framing climate change as a health issue increases audience engagement and support for collective action, even among less-concerned audiences, despite overall low public understanding of the health relevance of climate change.</li> 
+<li>As trusted messengers, health professionals can play an important role in informing the public about the health impacts of climate change and the health co-benefits of climate solutions, as well as in helping catalyze collective climate action.</li>
+<li>Increasing the volume and visibility of news coverage on the climate-health connection, particularly regarding climate solutions that lead to health benefits, could also strengthen public understanding of this connection.
+</li> 
+</ol>
 </td>
 </tr>
 <tr>
 <td class="highlight_box">Topics:</td>
 <td class="rt_text_box">Environment, Climate Change Adaptation, Climate Change Mitigation</td>
 </tr>
-<td class="highlight_box">Location:</td>
-<td class="rt_text_box">US and Europe</td>
-</tr>
 <tr>
 <td class="highlight_box">Resource Type:</td>
-<td class="rt_text_box">Strategies and Interventions, Training and Toolkits</td>
+<td class="rt_text_box">Strategies and Interventions</td>
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">Nature</td>
+<td class="rt_text_box">Science Direct; George Mason Center for Climate Change Communications/td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
-<td class="rt_text_bottom">2025-10-06 09:12:17</td>
+<td class="rt_text_bottom">2025-10-10 15:02:46</td>
 </tr>
 </table>
 </div><!--/left_content-->
