--- a/en/topic-resources/detail/455/index.html
+++ b/en/topic-resources/detail/455/index.html
@@ -105,27 +105,30 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">The Impact of Public Health Messages on Audience Engagement and Collective Climate Action</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Climate Action Literacy Interventions Increase Commitments to More Effective Mitigation Behaviors</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://www.sciencedirect.com/science/article/abs/pii/S2352154625000580" target="_new">https://www.sciencedirect.com/science/article/abs/pii/S2352154625000580</a></td>
+<td class="rt_text_box"><a href="https://academic.oup.com/pnasnexus/article/4/6/pgaf191/8159053" target="_new">https://academic.oup.com/pnasnexus/article/4/6/pgaf191/8159053</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>Communicating about the health implications of climate change has the potential to make the risks more concrete for audiences and reduce polarization on the issue.
+<td class="rt_text_box"><p>People hold substantial misperceptions about the relative efficacy of different climate change mitigation behaviors. Providing information about the relative mitigation potential of each behavior can help people recalibrate their understanding and increase their commitment to more impactful individual-level climate behaviors.
 </p></td>
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
-In preparing this paper, published in 2025, the authors reviewed 30 recent articles on effective communication about climate change and health. They reached three main conclusions related to implementing climate change communications.
-<ol>
-<li>Framing climate change as a health issue increases audience engagement and support for collective action, even among less-concerned audiences, despite overall low public understanding of the health relevance of climate change.</li> 
-<li>As trusted messengers, health professionals can play an important role in informing the public about the health impacts of climate change and the health co-benefits of climate solutions, as well as in helping catalyze collective climate action.</li>
-<li>Increasing the volume and visibility of news coverage on the climate-health connection, particularly regarding climate solutions that lead to health benefits, could also strengthen public understanding of this connection.
+<ul>
+<li>In a 2024 preregistered experiment in the United States, the authors tested the effects of two literacy interventions on correcting misperceptions and increasing commitments toward more effective individual-level climate actions.</li>
+<li>Participants (n = 3,895) were first asked to rate the degree to which they could commit to engaging in 26 carbon emission-reducing behaviors. Of these, 21 were individual-level behaviors, and five were collective climate actions.</li>
+<li>Then the participants were randomly assigned to one of three experimental conditions: a Prediction condition, in which they were asked to rank the relative mitigation potential of 21 climate behaviors after which they received feedback; an Information condition, in which they were passively exposed to information about the relative mitigation potential of the same behaviors; and a no-information Control condition. </li>
+<li>Following this procedure, all participants again rated their commitment levels for each of the behaviors. Participants then rated how effective they perceived each behavior to be in terms of carbon mitigation potential, and how easy or difficult it would be for them to engage in each behavior.</li>
+<li>The researchers found that participants significantly underestimated the mitigation potential of high-impact behaviors like not adopting a dog or taking one fewer long-haul flights, while greatly overestimating the potential of low-impact behaviors like using efficient appliances or recycling comprehensively. This was the case across demographic groups (political ideology, age, income, education, and gender. </li>
+<li>Both the Prediction and Information interventions led to more accurate efficacy perceptions and increased commitments to engage in higher-impact individual-level actions relative to the Control group.</li>
+<li>The researchers also found evidence for a negative spillover effect from individual to collective actions: participants in the literacy conditions decreased their commitments to collective climate actions such as voting or marching, suggesting an unintended consequence of interventions focusing solely on individual-level actions.
 </li> 
-</ol>
+</ul>
 </td>
 </tr>
 <tr>
@@ -138,7 +141,7 @@ In preparing this paper, published in 2025, the authors reviewed 30 recent artic
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">Science Direct; George Mason Center for Climate Change Communications/<td>
+<td class="rt_text_box">Oxford dademic - PNAS Nexus</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
