Climate Action Literacy Interventions

--- a/en/topic-resources/detail/454/index.html
+++ b/en/topic-resources/detail/454/index.html
@@ -138,7 +138,7 @@ In preparing this paper, published in 2025, the authors reviewed 30 recent artic
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">Science Direct; George Mason Center for Climate Change Communications/<td>
+<td class="rt_text_box">Science Direct; George Mason Center for Climate Change Communications<td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
