--- a/en/topic-resources/detail/455/index.html
+++ b/en/topic-resources/detail/455/index.html
@@ -141,7 +141,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">Oxford dademic - PNAS Nexus</td>
+<td class="rt_text_box">Oxford Academic - PNAS Nexus</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
