(1) e-Health Exercise. (2) Natural Disasters

--- a/en/topic-resources/fitness/index.html
+++ b/en/topic-resources/fitness/index.html
@@ -129,6 +129,8 @@ Systematic reviews and/or meta-analyses (based largely on epidemiological studie
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Fitness Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/458">e-Health Exercise Interventions Can Boost Physical Activity and Number of Steps in Healthy Older People</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Phone-based e-Health interventions and wearable physical activity training programs can boost daily physical activity overall, and number of steps per day specifically.</p> <strong><a href="../../../en/topic-resources/detail/458">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/444">Family-Centered Interventions Can Increase Moderate-to-Vigorous Physical Activity in children aged under 13.</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>Family-centered interventions enhanced children's levels of moderate-to-vigorous physical activity, particularly in the short-term and on weekends. However, there was limited effect on reducing sedentary behavior.</p> <strong><a href="../../../en/topic-resources/detail/444">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/443">Digital Health Interventions Can Significantly Reduce Sedentary Behavior among Patients with Chronic Illness</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
