--- a/en/topic-resources/climate-change/index.html
+++ b/en/topic-resources/climate-change/index.html
@@ -191,6 +191,8 @@ EN-US;mso-bidi-language:AR-SA;mso-bidi-font-weight:bold'>TM</span></sup>. The Ho
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Climate Change Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/457">Vulnerability to Natural Disasters Makes People More Open to Sustainable Choices</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
+<p>Messages highlighting recent, local natural disasters can push rightists toward sustainable consumption.</p> <strong><a href="../../../en/topic-resources/detail/457">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/456">Prioritize the ‘Movable Middle’</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
 <p>With the rise of populist politics, whoever wins the moveable middle wins the wider fight for international solidarity and progress.</p> <strong><a href="../../../en/topic-resources/detail/456">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/455">Climate Action Literacy Interventions Increase Commitments to More Effective Mitigation Behaviors</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
